# colorization

./: CMakeLists.txt  README.md  configure  script.sh
src/: colorization.cpp  colorization.hpp  main.cpp
test/: test_colorization.cpp
